demo-3/k8s-dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: dashboard.com
    http:
     paths:
      - pathType: Prefix
        path: "/"
        backend:
         service: 
          name: kubernetes-dashboard
          port:
            number: 80
